test/fixtures/behaviors/common/error/noDefaultExport.behavior.ts

export const somethingWeird = "something-weird"